Replace calls to deprecated Class#newInstance method
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847982 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 368c4828d4048e3b3983351f4a53624109f42bea